argocd/kustomize/wazuh-metrics-exporter/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-metrics-exporter
  namespace: security
  labels:
    app: wazuh-metrics-exporter
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9206
      targetPort: metrics
      protocol: TCP
  selector:
    app: wazuh-metrics-exporter
